# EasyVGA

./: .gitignore  Border.py  CNAME  EasyVGA.py  LICENSE  README.md  VGA.py  gitignore.txt  pyproject.toml  requirements.txt
.github/workflows/: main_sightanalysis.yml
app/: process  process.c  routes.py  utils.py
app/static/: script.js  styles.css
app/templates/: index.html
src/EasyVGA_Gabriel-Kahen/: EasyVGA.py  __init__.py
src/EasyVGA_Gabriel_Kahen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
