[project]
name = "EasyVGA_Gabriel-Kahen"
version = "0.0.1"
authors = [
  { name="Gabriel Kahen", email="gabekahen@gmail.com" },
]
description = "Making visibility graph analyses easy"
readme = "README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Gabriel-Kahen/EasyVGA"

[tool.poetry.dependencies]
numpy = ""
matplotlib = ""
PIL = ""
numba = ""